// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractQuery: reducer add new filter 1`] = `
Object {
  "error": null,
  "queryResults": Array [
    Object {
      "address": "ddbfe1fe25dfbb91633c576aaadd8d3e377be47b",
      "amount": 5678,
      "id": 149,
      "name": "P_ ?%#@!:* 41769",
      "state": "1",
      "supplier": "Supplier1_1301_24669",
    },
    Object {
      "address": "5112a195a0bf46dbeac6ce2e9a2fbbed50dc3e44",
      "amount": 67,
      "id": 150,
      "name": "P_ ?%#@!:* 92348",
      "state": "2",
      "supplier": "Supplier1",
    },
    Object {
      "address": "eff065f2e1cf483daee729f1f45c92db46fe1092",
      "amount": 1067,
      "id": 151,
      "name": "P_ ?%#@!:* 44366",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "bd0a5c9f7965e3ff970b2b69eb686a9dd6d93ea3",
      "amount": 32,
      "id": 152,
      "name": "P_ ?%#@!:* 46441",
      "state": "2",
      "supplier": "Supplier0_1301_46441",
    },
    Object {
      "address": "2e126696dd113e8ef1a96f51d4fe21bdec5bb8d4",
      "amount": 32,
      "id": 153,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier1_1301_46441",
    },
    Object {
      "address": "421022d27ad192eb2979d0d102945d05b1b62186",
      "amount": 32,
      "id": 154,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier2_1301_46441",
    },
    Object {
      "address": "1bf900ac2d58688ebd9847ec9993533b4207165e",
      "amount": 5678,
      "id": 155,
      "name": "P_ ?%#@!:* 80772",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "ad601648712a607acf73cae058d4bc8601c1a724",
      "amount": 100,
      "id": 3,
      "name": "Project_ ? 1452_77996",
      "state": "2",
      "supplier": "Supplier1",
    },
  ],
  "queryString": "state=eq.1",
  "tags": Array [
    Object {
      "display": "state eq 1",
      "field": "state",
      "operator": "eq",
      "value": 1,
    },
  ],
  "vars": Object {
    "amount": Object {
      "atBytes": 96,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "id": Object {
      "atBytes": 0,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "name": Object {
      "atBytes": 32,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
    "state": Object {
      "atBytes": 128,
      "contents": "BidState",
      "public": true,
      "type": "Label",
    },
    "supplier": Object {
      "atBytes": 64,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
  },
}
`;

exports[`ContractQuery: reducer clear query 1`] = `
Object {
  "error": null,
  "queryResults": null,
  "queryString": "",
  "tags": Array [],
  "vars": null,
}
`;

exports[`ContractQuery: reducer fetch querycirrus failure 1`] = `
Object {
  "error": "ERROR",
  "queryResults": null,
  "queryString": "",
  "tags": Array [],
  "vars": null,
}
`;

exports[`ContractQuery: reducer fetch querycirrus success 1`] = `
Object {
  "error": null,
  "queryResults": Array [
    Object {
      "address": "ddbfe1fe25dfbb91633c576aaadd8d3e377be47b",
      "amount": 5678,
      "id": 149,
      "name": "P_ ?%#@!:* 41769",
      "state": "1",
      "supplier": "Supplier1_1301_24669",
    },
    Object {
      "address": "5112a195a0bf46dbeac6ce2e9a2fbbed50dc3e44",
      "amount": 67,
      "id": 150,
      "name": "P_ ?%#@!:* 92348",
      "state": "2",
      "supplier": "Supplier1",
    },
    Object {
      "address": "eff065f2e1cf483daee729f1f45c92db46fe1092",
      "amount": 1067,
      "id": 151,
      "name": "P_ ?%#@!:* 44366",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "bd0a5c9f7965e3ff970b2b69eb686a9dd6d93ea3",
      "amount": 32,
      "id": 152,
      "name": "P_ ?%#@!:* 46441",
      "state": "2",
      "supplier": "Supplier0_1301_46441",
    },
    Object {
      "address": "2e126696dd113e8ef1a96f51d4fe21bdec5bb8d4",
      "amount": 32,
      "id": 153,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier1_1301_46441",
    },
    Object {
      "address": "421022d27ad192eb2979d0d102945d05b1b62186",
      "amount": 32,
      "id": 154,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier2_1301_46441",
    },
    Object {
      "address": "1bf900ac2d58688ebd9847ec9993533b4207165e",
      "amount": 5678,
      "id": 155,
      "name": "P_ ?%#@!:* 80772",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "ad601648712a607acf73cae058d4bc8601c1a724",
      "amount": 100,
      "id": 3,
      "name": "Project_ ? 1452_77996",
      "state": "2",
      "supplier": "Supplier1",
    },
  ],
  "queryString": "",
  "tags": Array [],
  "vars": null,
}
`;

exports[`ContractQuery: reducer queryCirrusVars success 1`] = `
Object {
  "error": null,
  "queryResults": Array [
    Object {
      "address": "ddbfe1fe25dfbb91633c576aaadd8d3e377be47b",
      "amount": 5678,
      "id": 149,
      "name": "P_ ?%#@!:* 41769",
      "state": "1",
      "supplier": "Supplier1_1301_24669",
    },
    Object {
      "address": "5112a195a0bf46dbeac6ce2e9a2fbbed50dc3e44",
      "amount": 67,
      "id": 150,
      "name": "P_ ?%#@!:* 92348",
      "state": "2",
      "supplier": "Supplier1",
    },
    Object {
      "address": "eff065f2e1cf483daee729f1f45c92db46fe1092",
      "amount": 1067,
      "id": 151,
      "name": "P_ ?%#@!:* 44366",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "bd0a5c9f7965e3ff970b2b69eb686a9dd6d93ea3",
      "amount": 32,
      "id": 152,
      "name": "P_ ?%#@!:* 46441",
      "state": "2",
      "supplier": "Supplier0_1301_46441",
    },
    Object {
      "address": "2e126696dd113e8ef1a96f51d4fe21bdec5bb8d4",
      "amount": 32,
      "id": 153,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier1_1301_46441",
    },
    Object {
      "address": "421022d27ad192eb2979d0d102945d05b1b62186",
      "amount": 32,
      "id": 154,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier2_1301_46441",
    },
    Object {
      "address": "1bf900ac2d58688ebd9847ec9993533b4207165e",
      "amount": 5678,
      "id": 155,
      "name": "P_ ?%#@!:* 80772",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "ad601648712a607acf73cae058d4bc8601c1a724",
      "amount": 100,
      "id": 3,
      "name": "Project_ ? 1452_77996",
      "state": "2",
      "supplier": "Supplier1",
    },
  ],
  "queryString": "",
  "tags": Array [],
  "vars": Object {
    "amount": Object {
      "atBytes": 96,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "id": Object {
      "atBytes": 0,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "name": Object {
      "atBytes": 32,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
    "state": Object {
      "atBytes": 128,
      "contents": "BidState",
      "public": true,
      "type": "Label",
    },
    "supplier": Object {
      "atBytes": 64,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
  },
}
`;

exports[`ContractQuery: reducer remove query filter center tags from multiple tags 1`] = `
Object {
  "error": null,
  "queryResults": Array [
    Object {
      "address": "ddbfe1fe25dfbb91633c576aaadd8d3e377be47b",
      "amount": 5678,
      "id": 149,
      "name": "P_ ?%#@!:* 41769",
      "state": "1",
      "supplier": "Supplier1_1301_24669",
    },
    Object {
      "address": "5112a195a0bf46dbeac6ce2e9a2fbbed50dc3e44",
      "amount": 67,
      "id": 150,
      "name": "P_ ?%#@!:* 92348",
      "state": "2",
      "supplier": "Supplier1",
    },
    Object {
      "address": "eff065f2e1cf483daee729f1f45c92db46fe1092",
      "amount": 1067,
      "id": 151,
      "name": "P_ ?%#@!:* 44366",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "bd0a5c9f7965e3ff970b2b69eb686a9dd6d93ea3",
      "amount": 32,
      "id": 152,
      "name": "P_ ?%#@!:* 46441",
      "state": "2",
      "supplier": "Supplier0_1301_46441",
    },
    Object {
      "address": "2e126696dd113e8ef1a96f51d4fe21bdec5bb8d4",
      "amount": 32,
      "id": 153,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier1_1301_46441",
    },
    Object {
      "address": "421022d27ad192eb2979d0d102945d05b1b62186",
      "amount": 32,
      "id": 154,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier2_1301_46441",
    },
    Object {
      "address": "1bf900ac2d58688ebd9847ec9993533b4207165e",
      "amount": 5678,
      "id": 155,
      "name": "P_ ?%#@!:* 80772",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "ad601648712a607acf73cae058d4bc8601c1a724",
      "amount": 100,
      "id": 3,
      "name": "Project_ ? 1452_77996",
      "state": "2",
      "supplier": "Supplier1",
    },
  ],
  "queryString": "state=eq.1&name=eq.P",
  "tags": Array [
    Object {
      "display": "state eq 1",
      "field": "state",
      "operator": "eq",
      "value": "1",
    },
    Object {
      "display": "name eq P",
      "field": "name",
      "operator": "eq",
      "value": "P",
    },
  ],
  "vars": Object {
    "amount": Object {
      "atBytes": 96,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "id": Object {
      "atBytes": 0,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "name": Object {
      "atBytes": 32,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
    "state": Object {
      "atBytes": 128,
      "contents": "BidState",
      "public": true,
      "type": "Label",
    },
    "supplier": Object {
      "atBytes": 64,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
  },
}
`;

exports[`ContractQuery: reducer remove query filter that contains only one tag 1`] = `
Object {
  "error": null,
  "queryResults": Array [
    Object {
      "address": "ddbfe1fe25dfbb91633c576aaadd8d3e377be47b",
      "amount": 5678,
      "id": 149,
      "name": "P_ ?%#@!:* 41769",
      "state": "1",
      "supplier": "Supplier1_1301_24669",
    },
    Object {
      "address": "5112a195a0bf46dbeac6ce2e9a2fbbed50dc3e44",
      "amount": 67,
      "id": 150,
      "name": "P_ ?%#@!:* 92348",
      "state": "2",
      "supplier": "Supplier1",
    },
    Object {
      "address": "eff065f2e1cf483daee729f1f45c92db46fe1092",
      "amount": 1067,
      "id": 151,
      "name": "P_ ?%#@!:* 44366",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "bd0a5c9f7965e3ff970b2b69eb686a9dd6d93ea3",
      "amount": 32,
      "id": 152,
      "name": "P_ ?%#@!:* 46441",
      "state": "2",
      "supplier": "Supplier0_1301_46441",
    },
    Object {
      "address": "2e126696dd113e8ef1a96f51d4fe21bdec5bb8d4",
      "amount": 32,
      "id": 153,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier1_1301_46441",
    },
    Object {
      "address": "421022d27ad192eb2979d0d102945d05b1b62186",
      "amount": 32,
      "id": 154,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier2_1301_46441",
    },
    Object {
      "address": "1bf900ac2d58688ebd9847ec9993533b4207165e",
      "amount": 5678,
      "id": 155,
      "name": "P_ ?%#@!:* 80772",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "ad601648712a607acf73cae058d4bc8601c1a724",
      "amount": 100,
      "id": 3,
      "name": "Project_ ? 1452_77996",
      "state": "2",
      "supplier": "Supplier1",
    },
  ],
  "queryString": "",
  "tags": Array [],
  "vars": Object {
    "amount": Object {
      "atBytes": 96,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "id": Object {
      "atBytes": 0,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "name": Object {
      "atBytes": 32,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
    "state": Object {
      "atBytes": 128,
      "contents": "BidState",
      "public": true,
      "type": "Label",
    },
    "supplier": Object {
      "atBytes": 64,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
  },
}
`;

exports[`ContractQuery: reducer remove query filter that contains two tags 1`] = `
Object {
  "error": null,
  "queryResults": Array [
    Object {
      "address": "ddbfe1fe25dfbb91633c576aaadd8d3e377be47b",
      "amount": 5678,
      "id": 149,
      "name": "P_ ?%#@!:* 41769",
      "state": "1",
      "supplier": "Supplier1_1301_24669",
    },
    Object {
      "address": "5112a195a0bf46dbeac6ce2e9a2fbbed50dc3e44",
      "amount": 67,
      "id": 150,
      "name": "P_ ?%#@!:* 92348",
      "state": "2",
      "supplier": "Supplier1",
    },
    Object {
      "address": "eff065f2e1cf483daee729f1f45c92db46fe1092",
      "amount": 1067,
      "id": 151,
      "name": "P_ ?%#@!:* 44366",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "bd0a5c9f7965e3ff970b2b69eb686a9dd6d93ea3",
      "amount": 32,
      "id": 152,
      "name": "P_ ?%#@!:* 46441",
      "state": "2",
      "supplier": "Supplier0_1301_46441",
    },
    Object {
      "address": "2e126696dd113e8ef1a96f51d4fe21bdec5bb8d4",
      "amount": 32,
      "id": 153,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier1_1301_46441",
    },
    Object {
      "address": "421022d27ad192eb2979d0d102945d05b1b62186",
      "amount": 32,
      "id": 154,
      "name": "P_ ?%#@!:* 46441",
      "state": "3",
      "supplier": "Supplier2_1301_46441",
    },
    Object {
      "address": "1bf900ac2d58688ebd9847ec9993533b4207165e",
      "amount": 5678,
      "id": 155,
      "name": "P_ ?%#@!:* 80772",
      "state": "1",
      "supplier": "Supplier1",
    },
    Object {
      "address": "ad601648712a607acf73cae058d4bc8601c1a724",
      "amount": 100,
      "id": 3,
      "name": "Project_ ? 1452_77996",
      "state": "2",
      "supplier": "Supplier1",
    },
  ],
  "queryString": "amount=eq.5678",
  "tags": Array [
    Object {
      "display": "amount eq 5678",
      "field": "amount",
      "operator": "eq",
      "value": "5678",
    },
  ],
  "vars": Object {
    "amount": Object {
      "atBytes": 96,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "id": Object {
      "atBytes": 0,
      "bytes": 32,
      "public": true,
      "signed": false,
      "type": "Int",
    },
    "name": Object {
      "atBytes": 32,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
    "state": Object {
      "atBytes": 128,
      "contents": "BidState",
      "public": true,
      "type": "Label",
    },
    "supplier": Object {
      "atBytes": 64,
      "dynamic": true,
      "public": true,
      "type": "String",
    },
  },
}
`;

exports[`ContractQuery: reducer set initial state 1`] = `
Object {
  "contractAddress": null,
  "error": null,
  "queryResults": null,
  "queryString": "",
  "tags": Array [],
  "vars": null,
}
`;
